@@ -106,6 +106,7 @@ graphics/safeMoveOn.tga \
 graphics/safeMoveOff.tga \
 graphics/eyedropperOn.tga \
 graphics/eyedropperOff.tga \
+graphics/skull.tga \
 
 
 
